--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div class="wrap">
     <h1>BUSCADOR DE IMPRESORAS</h1>
     <div class="searchbar" role="search">
-      <input id="q" type="text" placeholder="TS3350, 3350, Canon 3350, Pixma 4751, Deskjet 3747..." autocomplete="off">
+      <input id="q" type="text" placeholder="Ej: mg 2100, ts3350, deskjet 3747, f2140" autocomplete="off">
       <button id="clear" class="btn btn-clear">Limpiar</button>
     </div>
     <div class="grid">
@@ -73,8 +73,6 @@
     .replace(/[^a-z0-9]+/g,' ')
     .trim();
 
-  const BRANDS = new Set(['canon','hp','hewlett','epson','brother','lexmark','xerox','ricoh','kyocera','oki','samsung']);
-
   function firstOf(obj, keys){
     for (const k of keys){
       if (obj && obj[k] != null && obj[k] !== '') return String(obj[k]);
@@ -82,62 +80,19 @@
     return '';
   }
 
-  function extractTokens(text){
-    const n = ' ' + normalize(text) + ' ';
-    const tokens = new Set();
-    const seriesRegex = [
-      {key:'pixma', re:/\\bpixma\\b/},
-      {key:'ts', re:/\\bpixma\\s*ts\\b|\\bts\\b/},
-      {key:'mg', re:/\\bpixma\\s*mg\\b|\\bmg\\b/},
-      {key:'mx', re:/\\bpixma\\s*mx\\b|\\bmx\\b/},
-      {key:'tr', re:/\\bpixma\\s*tr\\b|\\btr\\b/},
-      {key:'dj', re:/\\bdesk\\s*jet\\b|\\bdeskjet\\b|\\bdj\\b/},
-      {key:'lj', re:/\\blaser\\s*jet\\b|\\blaserjet\\b|\\blj\\b/},
-      {key:'wc', re:/\\bwork\\s*centre\\b|\\bworkcentre\\b|\\bwc\\b/},
-      {key:'oj', re:/\\boffice\\s*jet\\b|\\bofficejet\\b|\\boj\\b/}
-    ];
-    for (const s of seriesRegex){ if (s.re.test(n)) tokens.add(s.key); }
-    const alnumRe = /\\b([a-z]{1,5})\\s*(\\d{2,6})([a-z]{1,3})?\\b/g;
-    let m;
-    while ((m = alnumRe.exec(n))){
-      tokens.add(m[1] + m[2] + (m[3]||''));
-      tokens.add(m[2]);
-    }
-    for (const num of (n.match(/\\b\\d{2,6}\\b/g) || [])) tokens.add(num);
-    return tokens;
-  }
+  const seriesList = ['mg','mx','ts','tr','deskjet','dj','lj','f'];
 
-  function tokensFromQuery(q){
+  function parseQuery(q){
     const nq = normalize(q);
-    const tokens = new Set();
-    const parts = nq.split(' ').filter(Boolean).filter(t => !BRANDS.has(t));
-    if (/\\bpixma\\b/.test(nq)) tokens.add('pixma');
-    if (/\\bts\\b/.test(nq)) tokens.add('ts');
-    if (/\\bmg\\b/.test(nq)) tokens.add('mg');
-    if (/\\bmx\\b/.test(nq)) tokens.add('mx');
-    if (/\\btr\\b/.test(nq)) tokens.add('tr');
-    if (/\\bdj\\b|\\bdesk\\s*jet\\b|\\bdeskjet\\b/.test(nq)) tokens.add('dj');
-    if (/\\blj\\b|\\blaser\\s*jet\\b|\\blaserjet\\b/.test(nq)) tokens.add('lj');
-    if (/\\bwc\\b|\\bwork\\s*centre\\b|\\bworkcentre\\b/.test(nq)) tokens.add('wc');
-    const alnumRe = /\\b([a-z]{1,5})\\s*(\\d{2,6})([a-z]{1,3})?\\b/g;
-    let m;
-    while ((m = alnumRe.exec(nq))){
-      tokens.add(m[1] + m[2] + (m[3]||''));
-      tokens.add(m[2]);
-    }
-    for (const num of (nq.match(/\\b\\d{2,6}\\b/g) || [])) tokens.add(num);
-    for (const p of parts) tokens.add(p);
-    return tokens;
+    const match = nq.match(/^(mg|mx|ts|tr|deskjet|dj|lj|f)\\s*(\\d{2,6})$/);
+    if (!match) return null;
+    return {serie: match[1], num: match[2]};
   }
 
-  function buildIndex(data){
-    return data.map(row => {
-      const compat = firstOf(row, ['compatibilidades','compatibilidad']);
-      const tokens = extractTokens(compat);
-      const cons = (firstOf(row, ['consumibles','cartucho','consumible'])||'').split(/\\s*[;,\\/|]\\s*/).filter(Boolean);
-      const cap  = (firstOf(row, ['capacidad','cap'])||'').split(/\\s*[;,\\/|]\\s*/).filter(Boolean);
-      return {tokens, cons, cap};
-    });
+  function matchCompat(compat, serie, num){
+    const nc = normalize(compat);
+    const regex = new RegExp(`\\b${serie}\\s*${num}\\b`);
+    return regex.test(nc);
   }
 
   async function loadData(){
@@ -154,7 +109,6 @@
   }
 
   const DATA = await loadData();
-  const INDEX = buildIndex(DATA);
 
   function render(cons, cap){
     const toList = arr => arr.length ? '<ul>'+arr.map(v=>'<li>'+v+'</li>').join('')+'</ul>' : '—';
@@ -165,15 +119,17 @@
   }
 
   function search(){
-    const qTokens = tokensFromQuery(input.value);
-    if (!qTokens.size){ render([],[]); return; }
+    const parsed = parseQuery(input.value);
+    if (!parsed){ render([],[]); return; }
     const setC = new Set(), setK = new Set();
-    for (const it of INDEX){
-      let ok = true;
-      for (const t of qTokens){ if (!it.tokens.has(t)){ ok=false; break; } }
-      if (!ok) continue;
-      it.cons.forEach(c => setC.add(c));
-      it.cap.forEach(k => setK.add(k));
+    for (const row of DATA){
+      const compat = firstOf(row, ['compatibilidades','compatibilidad']);
+      if (matchCompat(compat, parsed.serie, parsed.num)){
+        const cons = firstOf(row, ['consumibles','cartucho','consumible']);
+        const cap  = firstOf(row, ['capacidad','cap']);
+        if (cons) setC.add(cons);
+        if (cap)  setK.add(cap);
+      }
     }
     render(Array.from(setC), Array.from(setK));
   }
